[tool.poetry]
name = "Genshin Sundial"
version = "0.1.0"
description = "Shows time of different Genshin Impact servers in Discord Channel by a Embed which edit itself per 1 minute"
authors = ["Chtholly2000 || https://github.com/Chtholly2000"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "0.4.4"
"discord.py" = "1.7.3"
Flask = "2.0.1"
pytz = "2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
